@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.35 2005/01/13 03:06:14 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.36 2005/01/14 06:31:08 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
+  14 Jan 2005; Preston Cody <codeman@gentoo.org>
+  Added lilo code and cleaned up lilo code.  also do_partitioning renamed to partition
+  
   11 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added basic code for resizing filesystems with pyparted. Fixed code for
   resizing ntfs and ext2/3.
